# Meowko

./: .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  install-service.sh  meowko.service  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py
src/core/: __init__.py  context_builder.py  jsonl_store.py  memory_manager.py  persona_id.py  router.py  scheduler.py  user_state.py
src/discord/: __init__.py  client.py  commands.py  handlers.py  voice.py
src/media/: __init__.py  audio.py
src/providers/: __init__.py  brave_web.py  elevenlabs.py  fish_audio.py  image_gen.py  llm_client.py  soniox.py  weather.py
tests/: conftest.py  test_audio.py  test_config.py  test_context_builder.py  test_handlers.py  test_jsonl_store.py  test_llm_client.py  test_main.py  test_memory_manager.py  test_persona_id.py  test_text_channel_handler.py  test_user_state.py  test_weather.py
