[project]
name = "meowko"
version = "0.1.0"
description = "Multi-user, multi-persona Discord chatbot with text + voice support"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.3.0",
    "discord-ext-voice-recv>=0.5.1",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "tzlocal>=5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
meowko = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]
